src/main/java/com/example/geoserver/error/ogc/WorkSpaceNotFoundException.java
package com.example.geoserver.error.ogc;public class WorkSpaceNotFoundException {
}
